Responsive widget height, fixed loader sizes, minor css changes for firefox scrollbar & buttons

--- a/src/components/UIcomponents/Loader/Loader.scss
+++ b/src/components/UIcomponents/Loader/Loader.scss
@@ -3,24 +3,30 @@
 .category-card-loader {
     position: fixed;
     z-index: 222;
-    top: 150px;
+    top: 187px;
     left: 0;
     min-width: 250px;
     height: 100vh;
     width: 100vw;
     background: #f2f2f2;
+
+    .loader-backgroud {
+        transform: translate(0, 100px);
+    }
 }
 
 .widget-card-loader {
     position: absolute;
     z-index: 221;
-    width: 89%;
+    width: 92%;
     top: 51px;
-    height: 427px;
+    @include height-min-max(298px, 440px);
+    height: calc(100vh - 320px);
     background: #fff;
 
     .loader-backgroud {
         background: #f2f2f27d;
+        transform: translate(0, 70px);
     }
 }
 
@@ -36,7 +42,7 @@
         width: 170px;
         height: 170px;
         border-radius: 50%;
-        transform: translate(0, 120px);
+        // transform: translate(0, 100px);
     }
 }
 
@@ -133,6 +139,12 @@
 @media screen and (min-width: 722px) {
     .category-card-loader .loader-backgroud {
         transform: translate(40px, 150px);
+    }
+}
+
+@media screen and (min-height: 700px) {
+    .widget-card-loader .loader-backgroud {
+        transform: translate(0, 120px);
     }
 }
 
